replaced ReadDataTemplate with a more generic class